syntax = "proto3";

package lubricant;

import "google/rpc/status.proto";

option go_package = "github.com/AEnjoy/IoT-lubricant/protobuf/meta";

message ErrorMessage {
  google.rpc.Status code = 1;
  optional string stack = 2;
}

message Ping {
  int32 flag = 1; // 0:Ping 1:Pong 3: Error
}

message CommonResponse {
  int32 code = 1;
  string message = 2;
}
message Kv {
  string key = 1;
  string value = 2;
}
message KvMap{
  map<string, string> kv = 1;
}
message KvInt {
  string key = 1;
  int32 value = 2;
}
